# ens-normalize-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  update-upstream.yml
benches/: normalize.rs
scripts/: bench-js-compare.mjs  test-js-compat.sh  update-upstream.sh
src/: intmap.rs  lib.rs  nf.rs  spec.rs  utils.rs
tests/: upstream.rs
tests/js-compat/: package.json  validate-wasm.mjs
