[package]
name = "ens-normalize"
version = "0.1.0"
edition = "2024"
description = "Rust port of adraffy's ENS normalizer"
license = "MIT"
repository = "https://github.com/TateB/ens-normalize-rs"
homepage = "https://github.com/TateB/ens-normalize-rs"
documentation = "https://docs.rs/ens-normalize"
readme = "README.md"
keywords = ["ens", "ethereum", "unicode", "normalization", "idna"]
categories = ["text-processing", "encoding", "internationalization"]
exclude = ["/target", "/tests/js-compat/pkg"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "normalize"
harness = false
